Keep Claude settings local

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ cluster-home/test-area
 cluster-office/infrastructure/talos/generated-config
 terraform-plugin-proxmox.log
 terraform.tfstate*
+.claude/settings.local.json
