--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ cluster-home/test-area
 cluster-office/infrastructure/talos/generated-config
 terraform-plugin-proxmox.log
 terraform.tfstate*
-.claude/settings.local.json
+**/.claude/settings.local.json
