fix(kyverno): exclude kube-tools from webhook to prevent restart deadlock

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ cluster-office/infrastructure/talos/generated-config
 terraform-plugin-proxmox.log
 terraform.tfstate*
 **/.claude/settings.local.json
+**/.local
