fix(kyverno): update webhooks config to chart 3.7.0 format

--- a/cluster-home/operations/kube-tools/kyverno/helmrelease.yaml
+++ b/cluster-home/operations/kube-tools/kyverno/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
     replicaCount: 3
     config:
       webhooks:
-        - namespaceSelector:
+        namespaceSelector:
             matchExpressions:
               - key: kubernetes.io/metadata.name
                 operator: NotIn
