fix(media): replace HasTrackerError() with IsTrackerDown() in tqm config

--- a/cluster-home/operations/media/qbittorrent/tqm-secret.yaml
+++ b/cluster-home/operations/media/qbittorrent/tqm-secret.yaml
@@ -39,7 +39,7 @@ stringData:
           # Tag torrents with tracker errors
           - name: tracker-error
             update:
-              - HasTrackerError()
+              - IsTrackerDown()
 
         # Remove torrents with specific tags, but exclude certain categories
         clean:
