fix(tqm): update client config format for v1.19.0
url/user fields replace host/port/username in tqm v1.19.0

--- a/cluster-home/operations/media/qbittorrent/tqm-secret.yaml
+++ b/cluster-home/operations/media/qbittorrent/tqm-secret.yaml
@@ -11,12 +11,9 @@ stringData:
         enabled: true
         type: qbittorrent
         filter: default
-        host: qbittorrent.media
-        port: 8080
-        username: ${SECRET_QB_USERNAME}
+        url: http://qbittorrent.media:8080
+        user: ${SECRET_QB_USERNAME}
         password: ${SECRET_QB_PASSWORD}
-        basic_user: ""
-        basic_pass: ""
 
     filters:
       default:
