fix(metrics-server): add --kubelet-insecure-tls for Talos
Talos kubelet certs lack IP SANs, causing TLS verification failures

--- a/cluster-home/operations/kube-tools/metrics-server/helmrelease.yaml
+++ b/cluster-home/operations/kube-tools/metrics-server/helmrelease.yaml
@@ -28,6 +28,8 @@ spec:
       interval: 10m
   values:
     replicas: 2
+    args:
+      - --kubelet-insecure-tls
     resources:
       requests:
         cpu: 50m
