fix: remove plaintext cilium certs from git
switch to cronJob cert generation so certs are
created/rotated by cilium-certgen at runtime

--- a/cluster-home/infrastructure/talos/cilium-values.yaml
+++ b/cluster-home/infrastructure/talos/cilium-values.yaml
@@ -27,4 +27,8 @@ securityContext:
     - NET_ADMIN
     - SYS_ADMIN
     - SYS_RESOURCE
+hubble:
+  tls:
+    auto:
+      method: cronJob
 upgradeCompatibility: '1.19'
